vcl/source/gdi/dibtools.cxx
@@ -737,7 +737,7 @@ bool ImplReadDIBBits(SvStream& rIStm, DIBV5Header& rHeader, BitmapWriteAccess& r
     return( rIStm.GetError() == 0UL );
 }
 
-bool ImplReadDIBBody( SvStream& rIStm, Bitmap& rBmp, Bitmap* pBmpAlpha, sal_uLong nOffset, bool bMSOFormat = false )
+bool ImplReadDIBBody( SvStream& rIStm, Bitmap& rBmp, AlphaMask* pBmpAlpha, sal_uLong nOffset, bool bMSOFormat = false )
 {
     DIBV5Header aHeader;
     const sal_uLong nStmPos = rIStm.Tell();
@@ -869,7 +869,7 @@ bool ImplReadDIBBody( SvStream& rIStm, Bitmap& rBmp, Bitmap* pBmpAlpha, sal_uLon
             Bitmap::ReleaseAccess(pAcc);
             return false;
         }
-        Bitmap aNewBmpAlpha;
+        AlphaMask aNewBmpAlpha;
         BitmapWriteAccess* pAccAlpha = nullptr;
         bool bAlphaPossible(pBmpAlpha && aHeader.nBitCount == 32);
 
@@ -891,7 +891,7 @@ bool ImplReadDIBBody( SvStream& rIStm, Bitmap& rBmp, Bitmap* pBmpAlpha, sal_uLon
 
         if (bAlphaPossible)
         {
-            aNewBmpAlpha = Bitmap(aSizePixel, 8);
+            aNewBmpAlpha = AlphaMask(aSizePixel);
             pAccAlpha = aNewBmpAlpha.AcquireWriteAccess();
         }
 
@@ -1523,8 +1523,8 @@ bool ImplWriteDIBFileHeader(SvStream& rOStm, BitmapReadAccess& rAcc, bool bUseDI
 }
 
 bool ImplReadDIB(
-    Bitmap& rTarget, Bitmap*
-    pTargetAlpha,
+    Bitmap& rTarget,
+    AlphaMask* pTargetAlpha,
     SvStream& rIStm,
     bool bFileHeader,
     bool bMSOFormat=false)
@@ -1726,7 +1726,7 @@ bool ReadDIBBitmapEx(
 
 bool ReadDIBV5(
     Bitmap& rTarget,
-    Bitmap& rTargetAlpha,
+    AlphaMask& rTargetAlpha,
     SvStream& rIStm)
 {
     return ImplReadDIB(rTarget, &rTargetAlpha, rIStm, true);
@@ -1763,6 +1763,16 @@ bool WriteDIBBitmapEx(
     }
 
     return false;
+}
+
+sal_uInt32 getDIBInfoHeaderSize()
+{
+    return DIBINFOHEADERSIZE;
+}
+
+sal_uInt32 getDIBV5HeaderSize()
+{
+    return DIBV5HEADERSIZE;
 }
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
